# systa

./: .gitignore  .python-version  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  conf.py  exceptions.py  index.html  parse_event_constants_page.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  systa.py  utils.py
.github/workflows/: sphinx.yml
backends/: autoit.py  ctype.py  util.py  win_access.py
docs/: conf.py  fullmake.bat  idle_time_model.xlsx  index.html  index.rst.bak  itm.xlsx  localmake.bat  make.bat  make_redirect_index.py  requirements.txt
docs/_templates/: changelog-link.html  versions-nav.html
docs/source/: api.rst  events.rst  examples.rst  finding_windows.rst  index.rst  manipulating_windows.rst  usecases.md
docs/source/_static/: custom.css
events/: win_event_constants.py  win_events.py
experimental/: multi_process.py
main/: .buildinfo  api.html  events.html  examples.html  finding_windows.html  genindex.html  index.html  manipulating_windows.html  py-modindex.html  search.html  searchindex.js
main/.doctrees/: api.doctree  environment.pickle  events.doctree  examples.doctree  finding_windows.doctree  index.doctree  manipulating_windows.doctree
scripts/: parse_event_constants_page.py
src/: new_store_main.py
src/examples/: tiled_monitor.py
src/systa/: backend.py  exceptions.py  types.py  utils.py  windows.py
src/systa/backend/: access.py  monitors.py
src/systa/events/: constants.py  events.py  store.py  types.py
src/systa/events/decorators/: filter_by.py  listen_to.py
src/systa/experimental/: multi_process.py
src/systa/experimental/decorators/: __init__.py  dectest.py  filter_by.py  listen_to.py  main.py  runner.py
src/systa/scripts/: do_stuff.py  parse_event_constants_page.py
systa/: systa.py  utils.py
systa/backends/: autoit.py  ctype.py  util.py
systa/events/: win_event_constants.py  win_events.py
systa/scripts/: parse_event_constants_page.py
tests/: conftest.py  context.py  helpers.py  test_current_windows.py  test_filters.py  test_window.py  test_windows.py
tests/backend/: test_access.py  test_monitors.py
tests/events/: test_events.py  test_filters.py  test_store.py  test_win_event_constants.py  test_win_events.py
v0.1.1/: .buildinfo  api.html  events.html  finding_windows.html  genindex.html  index.html  manipulating_windows.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.1.1/.doctrees/: api.doctree  environment.pickle  events.doctree  finding_windows.doctree  index.doctree  manipulating_windows.doctree
v0.1.1/_sources/: events.rst.txt
v0.2.0/: .buildinfo  api.html  events.html  examples.html  finding_windows.html  genindex.html  index.html  manipulating_windows.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.0/.doctrees/: api.doctree  environment.pickle  events.doctree  examples.doctree  finding_windows.doctree  index.doctree  manipulating_windows.doctree
v0.2.0/_sources/: examples.rst.txt  manipulating_windows.rst.txt
