[tool.poetry]
name = "systa"
version = "0.1.0"
description = "Windows GUI automation with a cool API."
authors = ["Dustin Wyatt <dustin.wyatt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
boltons = "^21.0.0"
pynput = "^1.7.3"
python = "^3.8"
pywin32 = "^301"
sphinx-book-theme = "^0.1.0"
typeguard = "^2.12.0"
typing-inspect = "^0.7.1"

[tool.poetry.dev-dependencies]
Sphinx = "<4"
beautifulsoup4 = "^4.8"
commonmark = "^0.9.1"
ipython = "^7.9"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-prompt = "^1.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

