[tool.poetry]
name = "systa"
version = "0.1.1"
description = "Windows GUI automation with a cool API."
authors = ["Dustin Wyatt <dustin.wyatt@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/dmwyatt/systa"
repository = "https://github.com/dmwyatt/systa"
documentation = "https://dmwyatt.github.io/systa/"
keywords = ["automation", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    ]
include =["LICENSE"]

[tool.poetry.dependencies]
boltons = "^21.0.0"
pynput = "^1.7.3"
python = "^3.8"
pywin32 = "^301"
typeguard = "^2.12.0"
typing-inspect = "^0.7.1"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.8"
commonmark = "^0.9.1"
ipython = "^7.9"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
Sphinx = "<4"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-book-theme = "^0.1.0"
sphinx-multiversion = "^0.2.4"
sphinx-prompt = "^1.4.0"

[build-system]
requires = ["poetry_core>=1.0.3"]
build-backend = "poetry.core.masonry.api"

